--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "NODE_ENV=production MONGO_USER=mashefor MONGO_PASSWORD=mykael1234 MONGO_DEFAULT_DATABASE=shop PAYSTACK_KEY=pk_test_2d5285023c731fea630471493a69148dcfd03274 node app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
